// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Base renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#313131",
          "fontFamily": "GothamPro",
          "fontSize": 16,
          "lineHeight": 20,
        },
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Text Helper renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#606060",
          "fontFamily": "GothamPro",
          "fontSize": 16,
          "lineHeight": 20,
          "marginBottom": 40,
          "textAlign": "center",
        },
      ]
    }
  >
    test
  </Text>
</View>
`;
